--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 /* COMMON 기본 스타일 */
-body{
+body {
+  height: 3000px;
   color: #333333;
   font-size: 16px;
   font-weight: 400;
@@ -11,20 +12,88 @@ img {
   display: block;
 }
 
-a{
+a {
   text-decoration: none;
 }
 
-/*HEADER */
-header{
-  background-color: #f6f5f0;
-  border-bottom: 1px solid #c8c8c8;
-}
-header .inner {
+.inner {
   width: 1100px;
-  height: 120px;
   margin: 0 auto;
   position: relative;
+}
+
+.btn {
+  width: 130px;
+  padding: 10px;
+  border: 2px solid #333;
+  border-radius: 4px;
+  color: #333;
+  font-size: 16px;
+  font-weight: 700;
+  text-align:center;
+  cursor:pointer;
+  box-sizing: border-box;
+  display: block;
+  transition: .4s;
+}
+
+.btn:hover {
+  background-color: #333;
+  color: #fff;
+}
+
+.btn.btn--reverse {
+  background-color: #333;
+  color: #fff;
+}
+
+.btn.btn--reverse:hover {
+  background-color: transparent;
+  color: #333;
+}
+
+.btn.btn--brown{
+  color:#592B18;
+  border-color: #892B18;
+}
+
+.btn.btn--brown:hover{
+  color: #fff;
+  background-color: #592B18;
+}
+
+.btn.btn--gold{
+  color: #D9AA8A;
+  background-color: #D9AA8A;
+}
+
+.btn.btn--gold:hover{
+  color: #FFF;
+  background-color: #D9AA8A;
+}
+
+.btn.btn--white{
+  color: #fff;
+  background-color: #fff;
+}
+
+.btn.btn--white:hover{
+  color: #333;
+  background-color: #fff;
+}
+
+/*HEADER */
+header { 
+  width: 100%;
+  background-color: #f6f5f0;
+  border-bottom: 1px solid #c8c8c8;
+  position: fixed;
+  top: 0; 
+  z-index: 9;
+}
+
+header>.inner {
+  height: 120px;
 }
 
 header .logo {
@@ -43,15 +112,15 @@ header .sub-menu {
   display: flex;
 }
 
-header .sub-menu ul.menu{
+header .sub-menu ul.menu {
   display: flex;
 }
 
-header .sub-menu ul.menu li{
-  position: relative;  
+header .sub-menu ul.menu li {
+  position: relative;
 }
 
-header .sub-menu ul.menu li:not(:first-of-type):before{
+header .sub-menu ul.menu li:not(:first-of-type):before {
   content: "";
   width: 1px;
   height: 12px;
@@ -63,14 +132,14 @@ header .sub-menu ul.menu li:not(:first-of-type):before{
 }
 
 
-header .sub-menu ul.menu li a{
+header .sub-menu ul.menu li a {
   font-size: 12;
   padding: 11px 16px;
   display: block;
   color: #656565;
 }
 
-header .sub-menu ul.menu li a:hover{
+header .sub-menu ul.menu li a:hover {
   color: #000;
 }
 
@@ -79,7 +148,7 @@ header .sub-menu .search {
   position: relative;
 }
 
-header .sub-menu .search input{
+header .sub-menu .search input {
   width: 36px;
   height: 34px;
   padding: 4px 10px;
@@ -93,14 +162,14 @@ header .sub-menu .search input{
   transition: width .4s;
 }
 
-header .sub-menu .search input:focus{
+header .sub-menu .search input:focus {
   width: 190px;
   border-color: #669900;
 
 }
 
 
-header .sub-menu .search .material-icons{
+header .sub-menu .search .material-icons {
   height: 24px;
   position: absolute;
   top: 0;
@@ -110,6 +179,252 @@ header .sub-menu .search .material-icons{
   transition: opacity .3s;
 }
 
-header .sub-menu .search.focused .material-icons{
+header .sub-menu .search.focused .material-icons {
   opacity: 0;
+}
+
+header .main-menu {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 1;
+  display: flex;
+}
+
+header .main-menu .item {}
+
+header .main-menu .item .item__name {
+  padding: 10px 20px 34px 20px;
+  font-family: Arial, sans-serif;
+}
+
+header .main-menu .item:hover .item__name {
+  background-color: #2c2a29;
+  color: #669900;
+  border-radius: 6px 6px 0 0;
+}
+
+header .main-menu .item .item__contents {
+  width: 100%;
+  position: fixed;
+  left: 0;
+  display: none;
+}
+
+header .main-menu .item:hover .item__contents {
+  display: block;
+}
+
+
+header .main-menu .item .item__contents .contents__menu {
+  background-color: #2c2a29;
+}
+
+header .main-menu .item .item__contents .contents__menu>ul {
+  display: flex;
+  padding: 20px 0;
+}
+
+header .main-menu .item .item__contents .contents__menu>ul>li {
+  width: 220px;
+}
+
+header .main-menu .item .item__contents .contents__menu>ul>li h4 {
+  padding: 3px 0 12px 0;
+  font-size: 14px;
+  color: #fff;
+}
+
+header .main-menu .item .item__contents .contents__menu>ul>li ul li {
+  padding: 5px 0;
+  font-size: 12px;
+  color: #999;
+  cursor: pointer;
+
+}
+
+header .main-menu .item .item__contents .contents__menu>ul>li ul li:hover {
+  color: #669900
+}
+
+header .main-menu .item .item__contents .contents__texture {
+  background-image: url("../images/main_menu_pattern.jpg");
+  padding: 26px 0;
+  font-size: 12px;
+}
+
+header .main-menu .item .item__contents .contents__texture .inner h4 {
+  color: #999;
+  font-weight: 700;
+}
+
+header .main-menu .item .item__contents .contents__texture .inner p {
+  color: #669900;
+  margin: 4px 0 14px;
+}
+
+
+header .badges {
+  position: absolute;
+  top: 132px;
+  right: 12px;
+}
+
+header .badges .badge {
+  border-radius: 10px;
+  overflow: hidden;
+  margin-bottom: 12px;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, .15);
+  cursor: pointer;
+}
+
+/* VISUAL */
+
+.visual {
+  margin-top: 120px;
+  background-image: url("../images/visual_bg.jpg");
+}
+
+.visual .inner {
+  height: 646px;
+}
+
+.visual .title {
+  position: absolute;
+  top: 88px;
+  left: -10px;
+}
+
+.visual .title .btn{
+  position: absolute;
+  top: 259px;
+  left: 173px;
+}
+
+.visual .cup1.image{
+  position: absolute;
+  bottom: 0;
+  right: -47px;
+}
+
+.visual .cup1.text{
+  position: absolute;
+  top: 38px;
+  right: 171px;
+}
+.visual .cup2.image{
+  position: absolute;
+  bottom: 0;
+  right: 162px;
+}
+
+.visual .cup2.text{
+  position: absolute;
+  top: 321px;
+  right: 416px;
+}
+
+.visual .spoon{
+  position: absolute;
+  bottom: 0;
+  left: 275px;
+}
+
+.visual .fade-in{
+  opacity: 0;
+}
+
+/* NOTICE */
+.notice {
+
+}
+
+.notice .notice-line{
+  position: relative;
+}
+
+.notice .notice-line .bg-left{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #333;
+}
+
+.notice .notice-line .bg-right{
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50%;
+  height: 100%;
+  background-color: #f6f5ef;
+}
+
+.notice .notice-line .inner{
+  height: 64px;
+  border: 2px solid red;
+  display: flex;
+}
+
+.notice .notice-line .inner__left{
+  width: 60%;
+  height: 100%;
+  background-color: #333;
+  display: flex;
+  align-items: center;
+}
+
+.notice .notice-line .inner__left h2{
+  color: #fff;
+  font-size: 17px;
+  font-weight: 700;
+  margin-right: 20px;
+}
+
+.notice .notice-line .inner__left .swiper-container{
+  height: 62px;
+  background-color: orange;
+  flex-grow: 1;
+}
+
+.notice .notice-line .inner__left .notice-line__more{
+  width: 62px;
+  height: 62px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.notice .notice-line .inner__left .notice-line__more .material-icons{
+  color: #fff;
+  font-size: 30px;
+}
+
+.notice .notice-line .inner__right{
+  width: 40%;
+  height: 100%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.notice .notice-line .inner__right h2{
+  font-size: 17px;
+  font-weight: 700;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.notice .notice-line .inner__right .toggle-promotion{
+  width: 62px;
+  height: 62px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.notice .notice-line .inner__right .toggle-promotion .material-icons{
+  font-size: 30px;
 }
