--- a/css/main.css
+++ b/css/main.css
@@ -384,9 +384,19 @@ header .badges .badge {
 
 .notice .notice-line .inner__left .swiper-container{
   height: 62px;
-  background-color: orange;
   flex-grow: 1;
 }
+
+.notice .notice-line .inner__left .swiper-slide{
+  height: 62px;
+  display: flex;
+  align-items: center;
+}
+
+.notice .notice-line .inner__left .swiper-slide a{
+  color: #fff;
+}
+
 
 .notice .notice-line .inner__left .notice-line__more{
   width: 62px;
@@ -412,7 +422,6 @@ header .badges .badge {
   font-size: 17px;
   font-weight: 700;
   display: flex;
-  justify-content: center;
   align-items: center;
 }
 
@@ -427,4 +436,36 @@ header .badges .badge {
 
 .notice .notice-line .inner__right .toggle-promotion .material-icons{
   font-size: 30px;
+}
+
+.notice .promotion {
+  height: 693px;
+  border-color: #f6f5ef;
+  position: relative;
+}
+
+.notice .promotion .swiper-container{
+  width: calc(819px * 3 + 20px);
+  height: 553px;
+  position: absolute;
+  top: 40px;
+  left: 50%;
+  margin-left: calc((819px * 3 + 20px) / -2);
+}
+
+.notice .promotion .swiper-slide {
+  opacity: .5;
+  transition: opacity 1s;
+}
+
+.notice .promotion .swiper-slide-active{
+  opacity: 1;
+}
+
+.notice .promotion .swiper-slide .btn{
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  right: 0;
+  margin: auto;
 }
