--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* COMMON 기본 스타일 */
 body {
-  height: 3000px;
+  height: 6000px;
   color: #333333;
   font-size: 16px;
   font-weight: 400;
@@ -30,8 +30,8 @@ a {
   color: #333;
   font-size: 16px;
   font-weight: 700;
-  text-align:center;
-  cursor:pointer;
+  text-align: center;
+  cursor: pointer;
   box-sizing: border-box;
   display: block;
   transition: .4s;
@@ -44,7 +44,7 @@ a {
 
 .btn.btn--reverse {
   background-color: #333;
-  color: #fff;
+  color: #FFF;
 }
 
 .btn.btn--reverse:hover {
@@ -52,43 +52,43 @@ a {
   color: #333;
 }
 
-.btn.btn--brown{
-  color:#592B18;
-  border-color: #892B18;
+.btn.btn--brown {
+  color: #592B18;
+  border-color: #592B18;
 }
 
-.btn.btn--brown:hover{
-  color: #fff;
+.btn.btn--brown:hover {
+  color: #FFF;
   background-color: #592B18;
 }
 
-.btn.btn--gold{
+.btn.btn--gold {
   color: #D9AA8A;
-  background-color: #D9AA8A;
+  border-color: #D9AA8A;
 }
 
-.btn.btn--gold:hover{
+.btn.btn--gold:hover {
   color: #FFF;
   background-color: #D9AA8A;
 }
 
-.btn.btn--white{
-  color: #fff;
-  background-color: #fff;
+.btn.btn--white {
+  color: #FFF;
+  border-color: #FFF;
 }
 
-.btn.btn--white:hover{
+.btn.btn--white:hover {
   color: #333;
-  background-color: #fff;
+  background-color: #FFF;
 }
 
 /*HEADER */
-header { 
+header {
   width: 100%;
   background-color: #f6f5f0;
   border-bottom: 1px solid #c8c8c8;
   position: fixed;
-  top: 0; 
+  top: 0;
   z-index: 9;
 }
 
@@ -295,55 +295,54 @@ header .badges .badge {
   left: -10px;
 }
 
-.visual .title .btn{
+.visual .title .btn {
   position: absolute;
   top: 259px;
   left: 173px;
 }
 
-.visual .cup1.image{
+.visual .cup1.image {
   position: absolute;
   bottom: 0;
   right: -47px;
 }
 
-.visual .cup1.text{
+.visual .cup1.text {
   position: absolute;
   top: 38px;
   right: 171px;
 }
-.visual .cup2.image{
+
+.visual .cup2.image {
   position: absolute;
   bottom: 0;
   right: 162px;
 }
 
-.visual .cup2.text{
+.visual .cup2.text {
   position: absolute;
   top: 321px;
   right: 416px;
 }
 
-.visual .spoon{
+.visual .spoon {
   position: absolute;
   bottom: 0;
   left: 275px;
 }
 
-.visual .fade-in{
+.visual .fade-in {
   opacity: 0;
 }
 
 /* NOTICE */
-.notice {
+.notice {}
 
-}
-
-.notice .notice-line{
+.notice .notice-line {
   position: relative;
 }
 
-.notice .notice-line .bg-left{
+.notice .notice-line .bg-left {
   position: absolute;
   top: 0;
   left: 0;
@@ -352,7 +351,7 @@ header .badges .badge {
   background-color: #333;
 }
 
-.notice .notice-line .bg-right{
+.notice .notice-line .bg-right {
   position: absolute;
   top: 0;
   right: 0;
@@ -361,13 +360,13 @@ header .badges .badge {
   background-color: #f6f5ef;
 }
 
-.notice .notice-line .inner{
+.notice .notice-line .inner {
   height: 64px;
   border: 2px solid red;
   display: flex;
 }
 
-.notice .notice-line .inner__left{
+.notice .notice-line .inner__left {
   width: 60%;
   height: 100%;
   background-color: #333;
@@ -375,30 +374,30 @@ header .badges .badge {
   align-items: center;
 }
 
-.notice .notice-line .inner__left h2{
+.notice .notice-line .inner__left h2 {
   color: #fff;
   font-size: 17px;
   font-weight: 700;
   margin-right: 20px;
 }
 
-.notice .notice-line .inner__left .swiper-container{
+.notice .notice-line .inner__left .swiper-container {
   height: 62px;
   flex-grow: 1;
 }
 
-.notice .notice-line .inner__left .swiper-slide{
+.notice .notice-line .inner__left .swiper-slide {
   height: 62px;
   display: flex;
   align-items: center;
 }
 
-.notice .notice-line .inner__left .swiper-slide a{
+.notice .notice-line .inner__left .swiper-slide a {
   color: #fff;
 }
 
 
-.notice .notice-line .inner__left .notice-line__more{
+.notice .notice-line .inner__left .notice-line__more {
   width: 62px;
   height: 62px;
   display: flex;
@@ -406,26 +405,26 @@ header .badges .badge {
   align-items: center;
 }
 
-.notice .notice-line .inner__left .notice-line__more .material-icons{
+.notice .notice-line .inner__left .notice-line__more .material-icons {
   color: #fff;
   font-size: 30px;
 }
 
-.notice .notice-line .inner__right{
+.notice .notice-line .inner__right {
   width: 40%;
   height: 100%;
   display: flex;
   justify-content: flex-end;
 }
 
-.notice .notice-line .inner__right h2{
+.notice .notice-line .inner__right h2 {
   font-size: 17px;
   font-weight: 700;
   display: flex;
   align-items: center;
 }
 
-.notice .notice-line .inner__right .toggle-promotion{
+.notice .notice-line .inner__right .toggle-promotion {
   width: 62px;
   height: 62px;
   cursor: pointer;
@@ -434,7 +433,7 @@ header .badges .badge {
   align-items: center;
 }
 
-.notice .notice-line .inner__right .toggle-promotion .material-icons{
+.notice .notice-line .inner__right .toggle-promotion .material-icons {
   font-size: 30px;
 }
 
@@ -442,9 +441,15 @@ header .badges .badge {
   height: 693px;
   border-color: #f6f5ef;
   position: relative;
+  transition: height .4s;
+  overflow: hidden;
 }
 
-.notice .promotion .swiper-container{
+.notice .promotion.hide {
+  height: 0;
+}
+
+.notice .promotion .swiper-container {
   width: calc(819px * 3 + 20px);
   height: 553px;
   position: absolute;
@@ -458,13 +463,325 @@ header .badges .badge {
   transition: opacity 1s;
 }
 
-.notice .promotion .swiper-slide-active{
+.notice .promotion .swiper-slide-active {
   opacity: 1;
 }
 
-.notice .promotion .swiper-slide .btn{
+.notice .promotion .swiper-slide .btn {
   position: absolute;
   bottom: 10px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.notice .promotion .swiper-pagination {
+  bottom: 40px;
+  left: 0;
+  right: 0;
+}
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet {
+  background-color: transparent;
+  background-image: url("../images/promotion_slide_pager.png");
+  width: 12px;
+  height: 12px;
+  margin-right: 6px;
+  outline: none;
+}
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet:last-child() {
+  margin-right: 0;
+}
+
+.notice .promotion .swiper-pagination .swiper-pagination-bullet-active {
+  background-image: url("../images/promotion_slide_pager_on.png");
+}
+
+.notice .promotion .swiper-prev,
+.notice .promotion .swiper-next {
+  width: 42px;
+  height: 42px;
+  border: 2px solid #333;
+  border-radius: 50%;
+  position: absolute;
+  top: 300px;
+  z-index: 1;
+  cursor: pointer;
+  outline: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: .4s;
+}
+
+.notice .promotion .swiper-prev {
+  left: 50%;
+  margin-left: -480px;
+
+}
+
+.notice .promotion .swiper-next {
+  right: 50%;
+  margin-right: -480px;
+}
+
+.notice .promotion .swiper-prev:hover,
+.notice .promotion .swiper-next:hover {
+  background-color: #333;
+  color: #fff;
+}
+
+
+/* REWARDS */
+.rewards {
+  position: relative;
+}
+
+.rewards .bg-left {
+  width: 50%;
+  height: 100%;
+  background-color: #272727;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.rewards .bg-right {
+  width: 50%;
+  height: 100%;
+  background-color: #d5c798;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.rewards .inner {
+  background-image: url("../images/rewards.jpg");
+  height: 241px;
+}
+
+.rewards .btn-group {
+  position: absolute;
+  bottom: 24px;
+  right: 0;
+  width: 250px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.rewards .btn-group .btn.sign-up {
+  margin-right: 10px;
+}
+
+.rewards .btn-group .btn.log-in {
+  width: 110px;
+}
+
+.rewards .btn-group .btn.gift {
+  margin-top: 10px;
+  flex-grow: 1;
+}
+
+.youtube {
+  position: relative;
+  height: 700px;
+  background-color: #333;
+  overflow: hidden;
+}
+
+.youtube .youtube__area {
+  width: 1920px;
+  background-color: orange;
+  position: absolute;
+  left: 50%;
+  margin-left: calc(1920px / -2);
+  top: 50%;
+  margin-top: calc(1920px * 9 /16 /-2);
+}
+
+.youtube .youtube__area::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 0;
+  padding-top: 56.25%;
+}
+
+
+.youtube .youtube__cover {
+  background-image: url("../images/video_cover_pattern.png");
+  border-color: rgba(0, 0, 0, .3);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#player {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.youtube .inner {
+  height: 700px;
+}
+
+.youtube .floating1 {
+  position: absolute;
+  top: 50px;
+  left: 0;
+}
+
+.youtube .floating2 {
+  position: absolute;
+  top: 350px;
+  left: 150px;
+}
+
+
+/* SEASON PRODUCT */
+.season-product {
+  background-image: url("../images/season_product_bg.jpg");
+}
+
+.season-product .inner {
+  height: 400px;
+}
+
+.season-product .floating3 {
+  position: absolute;
+  top: -200px;
+  right: 0;
+}
+
+.season-product .text-group {
+  position: absolute;
+  top: 110px;
+  right: 100px;
+}
+
+.season-product .text-group .title {
+  margin-bottom: 10px;
+}
+
+.season-product .text-group .description {
+  margin-bottom: 15px;
+
+}
+
+.season-product .text-group .more {}
+
+
+/* RESERVE COFFEE */
+.reserve-coffee {
+  background-image: url("../images/reserve_bg.jpg");
+}
+
+.reserve-coffee .inner {
+  height: 400px;
+}
+
+.reserve-coffee .reserve-logo {
+  position: absolute;
+  top: 110px;
+  left: 0;
+}
+
+.reserve-coffee .text-group {
+  position: absolute;
+  top: 124px;
+  left: 208px;
+}
+
+.reserve-coffee .product {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.pick-your-favorite {
+  background-image: url("../images/favorite_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.pick-your-favorite .inner {
+  padding: 110px 0;
+}
+
+.pick-your-favorite .text-group {
+  margin-left: 100px;
+  width: 362px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-end;
+}
+
+.pick-your-favorite .text-group .title {
+  margin-bottom: 40px;
+}
+
+.pick-your-favorite .text-group .description {
+  margin-bottom: 40px;
+}
+
+/* RESERVE STROE */
+.reserve-store {
+  background-image: url("../images/reserve_store_bg.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+.reserve-store .inner{
+  height: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reserve-store .medal {
+  width: 334px;
+  height: 334px;
+  perspective: 600px;  
+}
+
+.reserve-store .medal .front,
+.reserve-store .medal .back {
+  width: 334px;
+  height: 334px;
+  backface-visibility: hidden;
+  transition: 1s;
+}
+
+.reserve-store .medal .front{
+  position: absolute;
+  transform: rotateY(0deg);
+}
+
+.reserve-store .medal:hover .front{
+  transform: rotateY(180deg);
+}
+
+.reserve-store .medal .back{
+  transform: rotateY(-180deg);
+}
+
+.reserve-store .medal:hover .back{
+  transform: rotateY(0deg);
+}
+
+.reserve-store .medal .back .btn{
+  position: absolute;
+  top: 240px;
   left: 0;
   right: 0;
   margin: auto;
