--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
 /* COMMON 기본 스타일 */
 body {
-  height: 6000px;
+  height: auto;
   color: #333333;
   font-size: 16px;
   font-weight: 400;
@@ -81,6 +81,42 @@ a {
   color: #333;
   background-color: #FFF;
 }
+
+.back-to-position {
+  opacity: 0;
+  transition: 1s;
+}
+
+.back-to-position.to-right {
+  transform: translateX(-150px);
+}
+
+.back-to-position.to-left {
+  transform: translateX(150px);
+}
+
+.show .back-to-position {
+  opacity: 1;
+  transform: translateX(0);
+}
+
+.show .back-to-position.delay-0 {
+  transition-delay: 0s;
+}
+
+.show .back-to-position.delay-1 {
+  transition-delay: .3s;
+}
+
+.show .back-to-position.delay-2 {
+  transition-delay: .6s;
+}
+
+.show .back-to-position.delay-3 {
+  transition-delay: .9s;
+}
+
+
 
 /*HEADER */
 header {
@@ -362,7 +398,6 @@ header .badges .badge {
 
 .notice .notice-line .inner {
   height: 64px;
-  border: 2px solid red;
   display: flex;
 }
 
@@ -741,7 +776,7 @@ header .badges .badge {
   background-size: cover;
 }
 
-.reserve-store .inner{
+.reserve-store .inner {
   height: 600px;
   display: flex;
   justify-content: center;
@@ -751,7 +786,7 @@ header .badges .badge {
 .reserve-store .medal {
   width: 334px;
   height: 334px;
-  perspective: 600px;  
+  perspective: 600px;
 }
 
 .reserve-store .medal .front,
@@ -762,27 +797,231 @@ header .badges .badge {
   transition: 1s;
 }
 
-.reserve-store .medal .front{
+.reserve-store .medal .front {
   position: absolute;
   transform: rotateY(0deg);
 }
 
-.reserve-store .medal:hover .front{
+.reserve-store .medal:hover .front {
   transform: rotateY(180deg);
 }
 
-.reserve-store .medal .back{
+.reserve-store .medal .back {
   transform: rotateY(-180deg);
 }
 
-.reserve-store .medal:hover .back{
+.reserve-store .medal:hover .back {
   transform: rotateY(0deg);
 }
 
-.reserve-store .medal .back .btn{
+.reserve-store .medal .back .btn {
   position: absolute;
   top: 240px;
   left: 0;
   right: 0;
   margin: auto;
+}
+
+/* FIND STORE */
+.find-store {
+  background-image: url("../images/find_store_bg.jpg");
+}
+
+.find-store .inner {
+  height: 400px;
+}
+
+.find-store .texture1 {
+  position: absolute;
+  top: 0;
+  left: 400px;
+}
+
+.find-store .texture2 {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.find-store .picture {
+  border-radius: 50%;
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, .5);
+  position: absolute;
+
+}
+
+.find-store .picture1 {
+  top: -60px;
+  left: 0;
+}
+
+.find-store .picture2 {
+  top: 150px;
+  left: 250px;
+}
+
+
+.find-store .text-group {
+  position: absolute;
+  top: 120px;
+  left: 550px;
+}
+
+.find-store .text-group .title {
+  margin-bottom: 20px;
+}
+
+.find-store .text-group .description {
+  margin-bottom: 20px;
+}
+
+.awards {
+  background-color: #272727;
+}
+
+.awards .inner {
+  padding: 40px 0;
+}
+
+.awards .inner .swiper-container {
+  width: 100%;
+  height: 40px;
+}
+
+.awards .swiper-prev,
+.awards .swiper-next {
+  width: 42px;
+  height: 42px;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  outline: none;
+  color: #fff;
+  opacity: .3;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.awards .swiper-prev {
+  left: -100px;
+}
+
+.awards .swiper-next {
+  right: -100px;
+}
+
+.awards .swiper-prev:hover,
+.awards .swiper-next:hover {
+  background-color: #fff;
+  color: #333;
+}
+
+/* FOOTER */
+
+footer {
+  background-color: #272727;
+  border-top: 1px solid #333;
+}
+
+footer .inner {
+  padding: 40px 0 60px 0;
+}
+
+footer .menu {
+  display: flex;
+  justify-content: center;
+  color: #FFF;
+}
+
+footer .menu li {
+  position: relative;
+}
+
+footer .menu li:not(:last-of-type):before {
+  content: "";
+  width: 3px;
+  height: 3px;
+  background-color: #555;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: -1px;
+  margin: auto;
+
+}
+
+footer .menu li a {
+  color: #ccc;
+  font-size: 12px;
+  font-weight: 700;
+  padding: 15px;
+  display: block;
+}
+
+footer .menu li a.green {
+  color: #669900;
+}
+
+footer .btn-group {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+}
+
+footer .btn-group .btn {
+  font-size: 12px;
+  margin-right: 10px;
+}
+
+footer .btn-group .btn:last-child {
+  margin-right: 0;
+}
+
+
+footer .info {
+  margin-top: 30px;
+  text-align: center;
+}
+
+footer .info span {
+  margin-right: 20px;
+  color: #999;
+  font-size: 12px;
+}
+
+footer .info span:last-child {
+  margin-right: 0;
+}
+
+footer .copyright{
+  color: #999;
+  font-size: 12px;
+  text-align: center;
+  margin-top: 12px;
+}
+
+footer .logo{
+  margin: 30px auto 0;
+}
+
+#to-top{
+  width: 42px;
+  height: 42px;
+  background-color: #333;
+  color: #fff;
+  border: 2px solid #fff;
+  border-radius: 10px;
+  cursor:pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+  z-index: 9;
 }
