--- a/css/common.css
+++ b/css/common.css
@@ -143,12 +143,13 @@ header .logo {
 
 header .sub-menu {
   position: absolute;
-  top: 10;
+  top: 10px;
   right: 0;
   display: flex;
 }
 
 header .sub-menu ul.menu {
+  font-family: Arial, sans-serif;
   display: flex;
 }
 
@@ -169,7 +170,7 @@ header .sub-menu ul.menu li:not(:first-of-type):before {
 
 
 header .sub-menu ul.menu li a {
-  font-size: 12;
+  font-size: 13px;
   padding: 11px 16px;
   display: block;
   color: #656565;
@@ -231,6 +232,7 @@ header .main-menu {
 header .main-menu .item .item__name {
   padding: 10px 20px 34px 20px;
   font-family: Arial, sans-serif;
+  font-size: 13px;
 }
 
 header .main-menu .item:hover .item__name {
