--- a/css/signin.css
+++ b/css/signin.css
@@ -8,10 +8,10 @@
   background-size: cover;
 }
 
-.signin .h1{
-  color: fff;
+.signin h1{
+  color: #fff;
   font-size: 30px;
-  font-weight: 700;
+  font-weight: 900;
   text-align: center;
   margin-bottom: 24px;
 }
